IK-334 képek fix

--- a/index.html
+++ b/index.html
@@ -315,19 +315,19 @@
                 <div class="topRatedSzuroDiv">
                     <h2>Top rated products</h2>
                     <ul id="TopKategoriakUl">
-                        <img src="./TermekKartyak/jeansjacket.jpg" class="TopKep" alt="" srcset="">
+                        <img src="../TermekKartyak/jeansjacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor" class="Jacket">Jeans Jacket</a></li>
                         <p class="szuroLiClass">$59.00</p>
-                        <img src="./TermekKartyak/pulcsinigger.jpg" class="TopKep" alt="" srcset="">
+                        <img src="../TermekKartyak/Training set (White).jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Black Shorts</a></li>
                         <p class="szuroLiClass">$25.00</p>
-                        <img src="./TermekKartyak/kabatnigger.jpg" class="TopKep" alt="" srcset="">
+                        <img src="../TermekKartyak/LeatherJacket.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor" class="Jacket">Leather Jacket</a></li>
                         <p class="szuroLiClass"><s id="athuzott" class="AkcioS">$100.00</s id="athuzott"><s id="athuzott" class="Akciozott">$50.00</s id="athuzott"></p>
-                        <img src="./TermekKartyak/feherPoloLatina.jpg" class="TopKep" alt="" srcset="">
+                        <img src="../TermekKartyak/feherPoloLatina.jpg" class="TopKep" alt="" srcset="">
                         <li><a href="" class="TopAnchor">Women Tops</a></li>
                         <p class="szuroLiClass">$45.00</p>
-                        <img src="./TermekKartyak/niggercollarshirt.jpg" class="TopKep" alt="" srcset="">
+                        <img src="../TermekKartyak/collarshirt.jpg" class="TopKep" alt="" srcset="">
                         <li ><a href="" class="TopAnchor">Collar T-Shirt</a></li>
                         <p>$35.00</p style="border-bottom:0px solid white">
                     </ul>
