Women átírása menre

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -133,7 +133,7 @@
         <div class="categories">
             <div class="category">
                 <a href="../HTML/shopMen.html"><img src="..//Home képek/ralpmen.jpg" alt="Women Fashion">
-                    <h3>WOMEN</h3></a>
+                    <h3>MEN</h3></a>
             </div>
             <div class="offer">
                 <h2>GET YOURS NOW! 50% OFF</h2>
