myaccount oldal general oldal megcsinálva

--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -119,17 +119,16 @@
             <img id="pfp" src="../Weboldal képek/Default_pfp.svg.png" alt="">
             <h1>Account Details</h1>
         </div>
-       <div class="torzs">
-        <div class="left">
+        <div class="torzs">
+            <div class="left">
 
-            <div class="input">
                 <button class="value">
                     <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                         <path
                             d="m1.5 13v1a.5.5 0 0 0 .3379.4731 18.9718 18.9718 0 0 0 6.1621 1.0269 18.9629 18.9629 0 0 0 6.1621-1.0269.5.5 0 0 0 .3379-.4731v-1a6.5083 6.5083 0 0 0 -4.461-6.1676 3.5 3.5 0 1 0 -4.078 0 6.5083 6.5083 0 0 0 -4.461 6.1676zm4-9a2.5 2.5 0 1 1 2.5 2.5 2.5026 2.5026 0 0 1 -2.5-2.5zm2.5 3.5a5.5066 5.5066 0 0 1 5.5 5.5v.6392a18.08 18.08 0 0 1 -11 0v-.6392a5.5066 5.5066 0 0 1 5.5-5.5z"
                             fill="#7D8590"></path>
                     </svg>
-                    Public Profile
+                    General
                 </button>
                 <button class="value">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" id="Line">
@@ -169,38 +168,57 @@
                     Notifications
                 </button>
             </div>
+            <div class="right">
+                <h3>General Settings</h3>
+                <p id="szoveg">Manage the account details you've shared with Csudajó Áruház including your name, contact
+                    info and more</p>
+                <h3>Account Info</h3>
+                <div class="account-info">
+                    <div class="account-info-row">
+                        <label>ID:</label>
+                        <div class="input-wrapper">
+                           ce9296ea34f4499302d0bd2db44a76
+                        </div>
+                    </div>
+                    <div class="account-info-row">
+                        <label>Display Name:</label>
+                        <div class="input-wrapper">
+                            <input type="text" value="Török Péter" readonly>
+                            <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
+                        </div>
+                    </div>
+                    <div class="account-info-row">
+                        <label>Email:</label>
+                        <div class="input-wrapper">
+                            <input type="email" value="torokpeter@turr.hu " readonly>
+                            <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
+                        </div>
+                    </div>
+                    <h3>Personal Details</h3>
+                    <div class="account-info-row">
+                        <label>Phone:</label>
+                        <div class="input-wrapper">
+                            <input type="text" value="(116-123)" readonly>
+                            <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
+                        </div>
+                    </div>
+                    <div class="account-info-row">
+                        <label>Address:</label>
+                        <div class="input-wrapper">
+                            <input type="text" value=" Baja, Bácska tér 1" readonly>
+                            <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
+                        </div>
+                    </div>
+                    <div class="account-info-row">
+                        <label>Country/Region:</label>
+                        <div class="input-wrapper">
+                            <input type="text" value="Hungary" readonly>
+                            <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="right">
-            <div class="input">
-                <label for="inputname" class="block text-gray-800 font-semibold text-sm">Input Name</label>
-                <div class="mt-2">
-                    <input type="text" name="inputname"
-                        class="block w-56 rounded-md py-1.5 px-2 ring-1 ring-inset ring-gray-400 focus:text-gray-800" />
-                </div>
-            </div>
-            <div class="input">
-                <label for="inputname" class="block text-gray-800 font-semibold text-sm">Input Name</label>
-                <div class="mt-2">
-                    <input type="text" name="inputname"
-                        class="block w-56 rounded-md py-1.5 px-2 ring-1 ring-inset ring-gray-400 focus:text-gray-800" />
-                </div>
-            </div>
-            <div class="input">
-                <label for="inputname" class="block text-gray-800 font-semibold text-sm">Input Name</label>
-                <div class="mt-2">
-                    <input type="text" name="inputname"
-                        class="block w-56 rounded-md py-1.5 px-2 ring-1 ring-inset ring-gray-400 focus:text-gray-800" />
-                </div>
-            </div>
-            <div class="input">
-                <label for="inputname" class="block text-gray-800 font-semibold text-sm">Input Name</label>
-                <div class="mt-2">
-                    <input type="text" name="inputname"
-                        class="block w-56 rounded-md py-1.5 px-2 ring-1 ring-inset ring-gray-400 focus:text-gray-800" />
-                </div>
-            </div>
-        </div>
-       </div>
     </div>
     <script src="../hambi.js"></script>
 </body>
