IK-30 Blog aloldalán a ratelés csillagok széppé tevése

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -196,11 +196,11 @@
                 <button class="BlogFoGomb" onclick="BlogSClickF()" id="BlogShareGomb">SHARE</button>
             </div>
             <div id="BlogRateCsillagokDiv">
-                <img src="../Blog képek/star-602148_1280.png" class="BlogRateCsillagIMG" alt="">
-                <img src="../Blog képek/star-602148_1280.png" class="BlogRateCsillagIMG" alt="">
-                <img src="../Blog képek/star-602148_1280.png" class="BlogRateCsillagIMG" alt="">
-                <img src="../Blog képek/star-602148_1280.png" class="BlogRateCsillagIMG" alt="">
-                <img src="../Blog képek/star-602148_1280.png" class="BlogRateCsillagIMG" alt="">
+                <img src="../Blog képek/star-602148_1280.png" id="BlogCsillag1" class="BlogRateCsillagIMG" alt="">
+                <img src="../Blog képek/star-602148_1280.png" id="BlogCsillag2" class="BlogRateCsillagIMG" alt="">
+                <img src="../Blog képek/star-602148_1280.png" id="BlogCsillag3" class="BlogRateCsillagIMG" alt="">
+                <img src="../Blog képek/star-602148_1280.png" id="BlogCsillag4" class="BlogRateCsillagIMG" alt="">
+                <img src="../Blog képek/star-602148_1280.png" id="BlogCsillag5" class="BlogRateCsillagIMG" alt="">
             </div>
             <div id="BlogShareDiv">
                 <img src="../Blog képek/Facebook_icon_2013.svg.png" class="BlogShareIMG" alt="">
