--- a/HTML/account.html
+++ b/HTML/account.html
@@ -96,7 +96,7 @@
                                 class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
+                            <a href="./logout.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
