--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <a href="./HTML/myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./HTML/myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./HTML/myaccount.html" class="dropdownLinks">Log out</a>
+                            <a href="./HTML/logout.html" class="dropdownLinks">Log out</a>
                             <a href="./HTML/coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
