IK-30 Blog aloldalán a megosztás lehetőség megcsinálása

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -204,10 +204,11 @@
             </div>
             <p id="RateUziRossz">Köszönjük a visszajelzést! Sajnáljuk, hogy így gondolod..</p>
             <p id="RateUziJo">Köszönjük a visszajelzést! Örülünk, hogy így gondolod!</p>
+            <p id="ShareUzi">Köszönjük, hogy megosztottad a posztunk!</p>
             <div id="BlogShareDiv">
-                <img src="../Blog képek/Facebook_icon_2013.svg.png" class="BlogShareIMG" alt="">
-                <img src="../Blog képek/Instagram_logo_2016.svg.png" class="BlogShareIMG" alt="">
-                <img src="../Blog képek/X logo.png" class="BlogShareIMG" alt="">
+                <img src="../Blog képek/Facebook_icon_2013.svg.png" id="BlogShare1" class="BlogShareIMG" onclick="ShareF()" alt="">
+                <img src="../Blog képek/Instagram_logo_2016.svg.png" id="BlogShare2" class="BlogShareIMG" onclick="ShareF()" alt="">
+                <img src="../Blog képek/X logo.png" id="BlogShare3" class="BlogShareIMG" onclick="ShareF()" alt="">
             </div>
             <p id="CommentUzi">Üzeneted sikeresen elküldtük! Köszönjük a visszajelzést!</p>
             <div id="CommentFulDiv">
