--- a/HTML/accessibility.html
+++ b/HTML/accessibility.html
@@ -164,7 +164,8 @@
             </button></a>
         </div>
         <div class="right">
-            
+            <span class="loader"></span>
+            <h3>IT'S CURRENTLY UNAVAILABLE...</h3>
         </div>
     </div>
     <!--footer-->
