--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <input type="range" class="range-slider-input-right" tabindex="0" max="1500" min="1" step="1">
                     </div>
                     <div class="arEsGombDiv">
-                        <button id="FilterGombDiv" onclick="FilterTeszt()">FILTER</button>
+                        <button id="FilterGombDiv" onclick="sliderSzures()">FILTER</button>
                         <div id="PriceDiv">
                             <p>Price:</p>
                             <p id="MinErtekId"> $0 </p>
