IK-36 szűrő slider befejezés

--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -166,7 +166,7 @@
                         <input type="range" class="range-slider-input-right" tabindex="0" max="100" min="0" step="1">
                     </div>
                     <div class="arEsGombDiv">
-                        <button id="FilterGombDiv" onclick="FilterTeszt()">FILTER</button>
+                        <button id="FilterGombDiv" onclick="sliderSzures()">FILTER</button>
                         <div id="PriceDiv">
                             <p>Price:</p>
                             <p id="MinErtekId"> $0 </p>
