IK-30 Blog oldal automatikus feltöltésének elkezdése

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="FoDiv">
-        <div class="BalBlogDiv">
+        <div class="BalBlogDiv" id="BalFoDiv">
             <h2>Blog</h2>
             <div class="BalRendezesNagyDiv">
                 <h3 class="BalRendezesHead">Rendezés:</h3>
@@ -150,7 +150,6 @@
                 <div class="BalKepDivClass">
                     <img src="../Blog képek/webshop.png" class="BalKepClass" alt="" srcset="">
                     <p class="BlogP">Kedves Vásárlóink!
-    
                         Örömmel értesítünk benneteket, hogy végre elindítottuk az új webshopunkat! Mostantól még könnyebben és kényelmesebben vásárolhattok kedvenc termékeinkből, mindössze néhány kattintással, akár otthonról, akár úton! 😊
                     </p>
                     <hr>
@@ -217,6 +216,7 @@
                     <option value="OlvasottakOPT" onclick="Szures('trending')">Legolvasottabbak  </option>
                 </select>
             </div>
+
             <div class="JobbKepDivClass">
                 <img src="../Blog képek/aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
@@ -231,6 +231,7 @@
                 <hr>
                 <p class="hidden">a</p>
             </div>
+
             <div class="JobbKepDivClass">
                 <img src="../Blog képek/ruha3.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
@@ -239,7 +240,9 @@
                         <h4>2021. 08. 11</h4>
                     </div class="JobbKicsiBal">
                     <div class="JobbKicsiJobb">
-                        <a href="../HTML/blogAloldal.html"><button class="JobbKicsiGomb">READ MORE</button></a>
+                        <a href="../HTML/blogAloldal.html">
+                            <button class="JobbKicsiGomb">READ MORE</button>
+                        </a>
                     </div>
                 </div>
                 <hr>
