IK-30 Blog és annak aloldalának automatikus feltöltése

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -14,7 +14,7 @@
 
     <title>Blog</title>
 </head>
-<body>
+<body onload="StartFel2()">
     <!--Menü és felsőléc-->
     <a href="" id="top"></a>
     <div class="stickyteto">
@@ -219,7 +219,7 @@
 
 
 
-        <div class="JobbBlogDiv">
+        <div class="JobbBlogDiv" id="JobbEgeszDiv">
             <h2>Search</h2>
             <div class="KeresesDiv">     
                 <input type="text" class="BlogSearchClass" placeholder="Keresés a blogok között">       
@@ -262,6 +262,7 @@
                 <hr>
                 <p class="hidden">a</p>
             </div>
+                        <!--  
             <div class="JobbKepDivClass">
                 <img src="../Blog képek/ruha4.jpg" class="JobbKepClass" alt="" srcset="">
                 <div class="JobbKicsiNagyDiv">
@@ -332,6 +333,7 @@
                 <hr>
                 <p class="hidden">a</p>
             </div>
+            -->
         </div>
         
     </div>
