--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -128,7 +128,7 @@
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
                 <div class="select">
-                    <select name="sorting" id="default-sorting">
+                    <select onchange="SortingFuggveny()" name="sorting" id="default-sorting">
                         <option value="">Default sorting</option>
                         <option value="low">Price: Low to High</option>
                         <option value="high">Price: High to Low</option>
