--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -119,7 +119,7 @@
         </div>
         <div class="torzs">
             <div class="left">
-
+                <div class="hamburger-menu" aria-label="Menu" role="button" aria-expanded="false">
                 <a href="./myaccount.html"><button class="value">
                         <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                             <path
@@ -165,6 +165,7 @@
                         </svg>
                         Notifications
                     </button></a>
+            </div>
             </div>
             <div class="right">
                 <h3>General Settings</h3>
