--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -222,7 +222,7 @@
         <div class="JobbBlogDiv" id="JobbEgeszDiv">
             <h2>Search</h2>
             <div class="KeresesDiv">     
-                <input type="text" class="BlogSearchClass" placeholder="Keresés a blogok között">       
+                <input type="text" class="BlogSearchClass" id="BlogSearchBarId" placeholder="Keresés a blogok között">       
                 <img id="keresesIkon" onclick="BlogKereses()" src="../Blog képek/free-search-icon-download-in-svg-png-gif-file-formats--find-magnifier-glass-magnify-ios-11-ui-elements-vol-2-pack-user-interface-icons-475061.webp" alt="" srcset="">
             </div>
             <div class="RendezesNagyDiv">
