Hambi menü belinkelve minden aloldalra myaccounton, szebb lett, már csak az elhelyezése nem megy

--- a/HTML/notifications.html
+++ b/HTML/notifications.html
@@ -116,7 +116,13 @@
     </div>
     <div class="torzs">
         <div class="left">
-
+            <div class="sidebar-hamburger">
+                <div class="hamburger-icon">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </div>
             <a href="./myaccount.html"><button class="value">
                     <svg data-name="Layer 2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
                         <path
