--- a/HTML/accessories.html
+++ b/HTML/accessories.html
@@ -168,9 +168,9 @@
                         <button id="FilterGombDiv" onclick="sliderSzures()">FILTER</button>
                         <div id="PriceDiv">
                             <p>Price:</p>
-                            <p id="MinErtekId"> $0 </p>
+                            <p id="MinErtekId">-</p>
                             <p> - </p>
-                            <p id="MaxErtekId"> $100 </p>
+                            <p id="MaxErtekId">-</p>
                         </div>
                     </div>
                     <div class="kategoriaSzuroDiv">
