--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -135,9 +135,9 @@
 
                 <p class="tajekoztato"><b>A *-al jelölt mezők kitöltése kötelező.</b></p>
 
-                <input type="text" name="input" class="normal" placeholder="Név*" required>
+                <input type="text" name="Név" name="input" class="normal" placeholder="Név*" required>
 
-                <input type="email" class="normal" name="email" placeholder="E-mail*" required>
+                <input type="email" name="E-mail" class="normal" name="email" placeholder="E-mail*" required>
                 
                 <div class="rendeltE">
                     <div id="bal">
@@ -157,15 +157,15 @@
                         <p class="tajekoztato"><b>Milyennek találtad a szolgáltatásainkat?</b></p>
                         <div class="ertekeles">
                             <div class="rating">
-                                <input value="5" name="rating" id="star5" type="radio">
+                                <input value="5" name="rating" id="star5" type="radio" name="★">
                                 <label for="star5"></label>
-                                <input value="4" name="rating" id="star4" type="radio">
+                                <input value="4" name="rating" id="star4" type="radio" name="★">
                                 <label for="star4"></label>
-                                <input value="3" name="rating" id="star3" type="radio">
+                                <input value="3" name="rating" id="star3" type="radio" name="★">
                                 <label for="star3"></label>
-                                <input value="2" name="rating" id="star2" type="radio">
+                                <input value="2" name="rating" id="star2" type="radio" name="★">
                                 <label for="star2"></label>
-                                <input value="1" name="rating" id="star1" type="radio">
+                                <input value="1" name="rating" id="star1" type="radio" name="★">
                                 <label for="star1"></label>
                             </div>
   
@@ -176,7 +176,7 @@
                 </div>
 
             
-                <textarea name="textarea" id="uzenet" placeholder="Üzenet"></textarea>
+                <textarea name="Üzenet" id="uzenet"  placeholder="Üzenet"></textarea>
                 <button type="submit" id="SendGomb">Küldés</button>
             </form>
         </div>
