IK-36 sorting befejezése és select javítása

--- a/HTML/shopMen.html
+++ b/HTML/shopMen.html
@@ -128,10 +128,9 @@
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
                 <div class="select">
-                    <select onchange="SortingFuggveny()" name="sorting" id="default-sorting">
-                        <option value="">Default sorting</option>
-                        <option value="low">Price: Low to High</option>
-                        <option value="high">Price: High to Low</option>
+                    <select  name="sorting" id="default-sorting" onchange="sortCards(this.value)">
+                        <option value="novekvo">Low to High</option>
+                        <option value="csokkeno">High to Low</option>
                     </select>
                 </div>
             </div>
