IK-36 függvény parameter törlés

--- a/HTML/accessories.html
+++ b/HTML/accessories.html
@@ -127,7 +127,7 @@
             <div class="alatta">
                 <p id="result">Showing all 0 results</p>
                 <div class="select">
-                    <select  name="sorting" id="default-sorting" onchange="sortCards(this.value)">
+                    <select  name="sorting" id="default-sorting" onchange="sortCards()">
                         <option value="novekvo">Low to High</option>
                         <option value="csokkeno">High to Low</option>
                     </select>
