IK-36 sorting style szépítés

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
                 <p id="result"></p>
                 <div class="select">
                     <select  name="sorting" id="default-sorting" onchange="sortCards()">
+                        <option value="---">---</option>
                         <option value="novekvo">Low to High</option>
                         <option value="csokkeno">High to Low</option>
                     </select>
