--- a/HTML/shopClothing.html
+++ b/HTML/shopClothing.html
@@ -128,6 +128,7 @@
                 <p id="result">Showing all 0 results</p>
                 <div class="select">
                     <select  name="sorting" id="default-sorting" onchange="sortCards()">
+                        <option value="---">---</option>
                         <option value="novekvo">Low to High</option>
                         <option value="csokkeno">High to Low</option>
                     </select>
