--- a/HTML/shopWomen.html
+++ b/HTML/shopWomen.html
@@ -129,6 +129,7 @@
                 <p id="result">Showing all 0 results</p>
                 <div class="select">
                     <select  name="sorting" id="default-sorting" onchange="sortCards()">
+                        <option value="---">---</option>
                         <option value="novekvo">Low to High</option>
                         <option value="csokkeno">High to Low</option>
                     </select>
