IK-30 Blog oldal szűrőjének megírása, működőképesre

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -135,10 +135,10 @@
             <div class="RendezesNagyDiv">
                 <h3>Rendezés:</h3>
                 <select name="BlogKeresesSelectNev" id="BlogKeresesSelectID">
-                    <option value="UjOPT" onclick="Szures('newest')">Legújabbak</option>
-                    <option value="RegiOPT" onclick="Szures('old')">Legrégibbek</option>
-                    <option value="NepszeruOPT" onclick="Szures('rate')">Legkedveltebbek</option>
-                    <option value="OlvasottakOPT" onclick="Szures('trending')">Legolvasottabbak  </option>
+                    <option value="UjOPT" onselect="Szures('new')">Legújabbak</option>
+                    <option value="RegiOPT" onselect="Szures('old')">Legrégibbek</option>
+                    <option value="NepszeruOPT" onselect="Szures('best')">Legkedveltebbek</option>
+                    <option value="OlvasottakOPT" onselect="Szures('trending')">Népszerűek  </option>
                 </select>
             </div>
         </div>
