IK-36 slidder bugfix

--- a/HTML/accessories.html
+++ b/HTML/accessories.html
@@ -134,8 +134,7 @@
                     </select>
                 </div>
             </div>
-            <div class="row">
-            </div>
+            <div class="row"></div>
         </div>
         <div class="jobb">
             <div class="szuroDiv">
