--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="main">
         <div class="bal">
             <div class="cim">
-                <h2>Casual</h2>
+                <h2>Shop</h2>
             </div>
             <div class="alatta">
                 <p id="result"></p>
@@ -161,7 +161,7 @@
                             </div>
                         </div>
                     
-                        <input type="range" class="range-slider-input-left" tabindex="0" max="100" min="0" step="1">
+                        <input type="range" class="range-slider-input-left" tabindex="0" max="100" min="0" step="1" >
                         <input type="range" class="range-slider-input-right" tabindex="0" max="100" min="0" step="1">
                     </div>
                     <div class="arEsGombDiv">
