--- a/HTML/home.html
+++ b/HTML/home.html
@@ -17,7 +17,7 @@
      <div class="stickyteto">
          <div class="felsoLec">
              <div class="webName">
-                 <p class="oldalnev">Csudajó Áruház</p>
+                <a href="./HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
                  <p class="motto">Itt még romániát is megtalálod!</p>
              </div>
              <div class="hamburger">
