--- a/HTML/shopCasual.html
+++ b/HTML/shopCasual.html
@@ -24,7 +24,7 @@
     <div class="stickyteto">
         <div class="felsoLec">
             <div class="webName">
-                <p class="oldalnev">Csudajó Áruház</p>
+                <a href="./HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
                 <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
             <div class="hamburger">
