--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -16,7 +16,7 @@
     <div class="stickyteto">
         <div class="felsoLec">
             <div class="webName">
-                <a href="./HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
+                <a href="../HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
                 <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
             <div class="hamburger">
