IK-30 blog oldalon a cím műkődőre írása

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -19,7 +19,7 @@
     <div class="stickyteto">
         <div class="felsoLec">
             <div class="webName">
-                <a href="./HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
+                <a href="./home.html"><p class="oldalnev">Csudajó Áruház</p></a>
                 <p class="motto">Itt még romániát is megtalálod!</p>
             </div>
 
