--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -20,7 +20,7 @@
     <div class="stickyteto">
         <div class="felsoLec">
             <div class="webName">
-                <a href="./HTML/home.html"><p class="oldalnev">Csudajó Áruház</p></a>
+                <a href="./home.html"><p class="oldalnev">Csudajó Áruház</p></a>
                 <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
             <div class="hamburger">
