IK-30 Blog aloldalának a kommentelés lehetőségének az elkezdése

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -215,9 +215,41 @@
                 <textarea name="textarea" id="uzenet" placeholder="Üzenet"></textarea>
                 <button type="submit" id="BlogCommentSendGomb" onclick="CommentBarDis()" class="BlogFoGomb">KÜLDÉS</button>
             </div>
+            <div class="commentDiv" id="CommentNagyDiv">
+                <div class="commentSection">
+                    <div class="commentIkon">
+                        <img class="commentKep" src="/IKTAruhaz/Blog képek/commentikon.png" alt="">
+                    </div>
+                    <div class="commentKicsiDiv">
+                        <p class="commentSzoveg">
+                            Kiváló minőségű termékek, és a csomagolás is profi. Bátran ajánlom mindenkinek!
+                        </p>
+                    </div>
+                </div>
+                <div class="commentSection">
+                    <div class="commentIkon">
+                        <img class="commentKep" src="/IKTAruhaz/Blog képek/commentikon.png" alt="">
+                    </div>
+                    <div class="commentKicsiDiv">
+                        <p class="commentSzoveg">
+                            A termék kicsit késlekedett a szállítással, nem volt annyira gyors, mint vártam.
+                        </p>
+                    </div>
+                </div>
+                <div class="commentSection">
+                    <div class="commentIkon">
+                        <img class="commentKep" src="/IKTAruhaz/Blog képek/commentikon.png" alt="">
+                    </div>
+                    <div class="commentKicsiDiv">
+                        <p class="commentSzoveg">
+                            Nagyon elégedett vagyok a vásárlásommal, a termék pontosan olyan, mint amit vártam.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
 
-
+        
 
         <div class="JobbBlogDiv" id="JobbEgeszDiv">
             <h2>Search</h2>
@@ -365,7 +397,7 @@
     </footer>
 
 <script src="./main.js"></script>
-<script src="../blog.js"></script>
+<script src="../blog.js" defer></script>
 <script src="../hambi.js"></script>
 </body>
 </html>
