myaccount, input mezőkbe lehet írni, localstorage csak.

--- a/HTML/account.html
+++ b/HTML/account.html
@@ -191,7 +191,7 @@
                     <div class="account-info-row">
                         <label>Password:</label>
                         <div class="input-wrapper">
-                            <input type="text" value="************" readonly>
+                            <input type="password" value="************" readonly>
                             <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
                         </div>
                     </div>
@@ -242,6 +242,7 @@
     </footer>
     <script src="../hambi.js"></script>
     <script src="../sidebar-toggle.js"></script> 
+    <script src="../inputedit.js"></script>
 </body>
 
 </html>
