--- a/HTML/myaccount.html
+++ b/HTML/myaccount.html
@@ -264,6 +264,7 @@
     </footer>
     <script src="../hambi.js"></script>
     <script src="../sidebar-toggle.js"></script> 
+    <script src="../inputedit.js"></script>
 </body>
 
 </html>
