Notifications oldalon, interaktívvá alakítás kezdés.

--- a/HTML/account.html
+++ b/HTML/account.html
@@ -191,7 +191,7 @@
                     <div class="account-info-row">
                         <label>Password:</label>
                         <div class="input-wrapper">
-                            <input type="password" value="************" readonly>
+                            <input type="password" placeholder="*******" readonly>
                             <img class="edit-icon" src="../Weboldal képek/cerka.png" alt="">
                         </div>
                     </div>
