--- a/HTML/notifications.html
+++ b/HTML/notifications.html
@@ -447,7 +447,7 @@
     </footer>
     <script src="../hambi.js"></script>
     <script src="../sidebar-toggle.js"></script>
-    <script src=".//textarea.js"></script>
+    <script src="..//textarea.js"></script>
 </body>
 
 </html>
