IK-30 Comment a blogon megcsinálása

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -124,6 +124,12 @@
             <h2>Új ajánlatok</h2>
             <div class="FoKepDiv">
                 <img class="FoKep" src="../Blog képek/aaaaaaa2.jpg" alt="">
+                <div class="kepModal">
+                    <span class="BezaroGomb">
+                        &times;
+                    </span>
+                    <img src="../Blog képek/aaaaaaa2.jpg" class="ModalKep" alt="">
+                </div>
                 <hr>
                 <h3 class="FoDatum">2025.01.22</h3>
             </div>
@@ -215,6 +221,7 @@
                 <textarea name="textarea" id="uzenet" placeholder="Üzenet"></textarea>
                 <button type="submit" id="BlogCommentSendGomb" onclick="CommentBarDis()" class="BlogFoGomb">KÜLDÉS</button>
             </div>
+            
             <div class="commentDiv" id="CommentNagyDiv">
                 <div class="commentSection">
                     <div class="commentIkon">
