IK-31 Blog oldal mobilnézetében a kereső bar megjelenítése és egy visszanyil létrehozésa

--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -399,6 +399,7 @@
 
         </div>
 
+        <button onclick="window.location.href='blog.html'" class="visszaBlogBTN">⬅</button>
         <button onclick="window.location.href='#top'" class="visszaBTN">⬆</button>
 
     </footer>
