--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -116,6 +116,10 @@
     <div class="FoDiv">
         <div class="BalBlogDiv" id="BalFoDiv">
             <h2>Blog</h2>
+            <div class="KeresesDiv2">     
+                <input type="text" class="BlogSearchClass" id="BlogSearchBarId2" placeholder="Keresés a blogok között">       
+                <img id="keresesIkon" class="KeresesIkon2" onclick="BlogKereses()" src="../Blog képek/free-search-icon-download-in-svg-png-gif-file-formats--find-magnifier-glass-magnify-ios-11-ui-elements-vol-2-pack-user-interface-icons-475061.webp" alt="" srcset="">
+            </div>
             <div class="BalRendezesNagyDiv">
                 <h3 class="BalRendezesHead">Rendezés:</h3>
                 <select name="BalBlogKeresesSelectNev" id="BalBlogKeresesSelectID">
