Több trágár szó blokkolva, kezdetleges cart elkezdve

--- a/HTML/transactions.html
+++ b/HTML/transactions.html
@@ -248,6 +248,7 @@
     </footer>
     <script src="../hambi.js"></script>
     <script src="../sidebar-toggle.js"></script> 
+    <script src="../transaction.js"></script>
 </body>
 
 </html>
