IK-30 Apróságok kijavítása a blog oldalon

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -110,7 +110,7 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Románia/Nincstalalat</p>
+        <p id="blogTart">Home/Blog</p>
     </div>
 
     <div class="FoDiv">
