--- a/HTML/blogAloldal.html
+++ b/HTML/blogAloldal.html
@@ -114,14 +114,14 @@
 
     </div>
     <div class="route">
-        <p>Home/Románia/Nincstalalat</p>
+        <p id="blogTart">Home/Blog/Tartalom</p>
     </div>
 
     <div class="FoDiv">
 
 
         <div class="BalBlogDiv">
-            <h2>Új ajánlatok</h2>
+            <h2 id="BlogCim">Új ajánlatok</h2>
             <div class="FoKepDiv">
                 <img class="FoKep" src="../Blog képek/loading-icon-1.png" alt="" id="EredetiFokep" onclick="ModalMegnyit()">
                 <div class="kepModal" id="KepModal_">
