IK-43 coupon redesign

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -15,6 +15,8 @@
     <title>Coupons</title>
 </head>
 <body>
+
+    <p class="oldalType" style="display: none;">coupon</p>
     <!--Menü és felsőléc-->
     <a href="" id="top"></a>
     <div class="stickyteto">
@@ -116,37 +118,6 @@
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
-        <div class="couponMain">
-            <div class="szoveg">
-                <h1>Kari ari csak neked számodra!</h1>
-                <p class="couponLeiras">Lepj meg valakit egy csodálatos ajándékkal amit minden nap magán hordhat! Ezzel a kuponnal 15% kedvezményt biztosítunk bármely termék árából a webshopon. Felhasználható 2024. december 31-ig.</div>
-                <button>Beváltom</button>
-                <div class="kep">
-                    <img src="../kupon_kepek/karacsony.jpg" alt="" class="couponPic">
-                    <p class="kedvezmeny">15%</p>
-                </div>
-        </div>
-
-        <div class="couponMain">
-            <div class="szoveg">
-                <h1>Húsvéti dinom-dánom</h1>
-                <p class="couponLeiras">Meglepetéés! kerüljön a kosárba a legjobb pólóink valamelyike és 10% kedvezményt kapsz hozzá! Ez a kupon egy póló kategóriájú termékre érvényes. Nincs megszabva árminimum. Felhasználható 2025. április 31-ig.</div>
-                <button>Beváltom</button>
-                <div class="kep">
-                    <img src="../kupon_kepek/husvet.jpg" alt="" class="couponPic">
-                    <p class="kedvezmeny">10%</p>
-                </div>
-        </div>
-
-        <div class="couponMain">
-            <div class="szoveg">
-                <h1>Black friday!!!</h1>
-                <p class="couponLeiras">Rengeteg ajánlattal és hatalmas akciókkal készül a webshopunk! Szerezz be most pólót, kabátot, sapkát és még sok mást akár 40% kedvezménnyel!</div>
-                <button>Beváltom</button>
-                <div class="kep">
-                    <img src="../kupon_kepek/feketePentek.jpg" alt="" class="couponPic">
-                </div>
-        </div>
     </div>
 
     
@@ -178,5 +149,6 @@
     </footer>
 
 <script src="../hambi.js"></script>
+<script src="/couponJS.js"></script>
 </body>
 </html>
