IK-44 couponJS link javítás

--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -149,6 +149,6 @@
     </footer>
 
 <script src="../hambi.js"></script>
-<script src="/couponJS.js"></script>
+<script src="../couponJS.js"></script>
 </body>
 </html>
