--- a/HTML/coupons.html
+++ b/HTML/coupons.html
@@ -65,7 +65,7 @@
                         <a href="./myaccount.html" class="MobilDropdown">account details</a>
                     </li>
                     <li class="menuItemDropdown2">
-                        <a href="./logOut.html" class="MobilDropdown">log out</a>
+                        <a href="./logout.html" class="MobilDropdown">log out</a>
                     </li>
                     <li class="menuItemDropdown2">
                         <a href="./coupons.html" class="MobilDropdown">coupons</a>
@@ -98,7 +98,7 @@
                     <a href="./myaccount.html" class="menuLinks" id="dropbtn">my account<span class="menuNyil">▾</span></a>
                         <div class="dropdownMain">
                             <a href="./myaccount.html" class="dropdownLinks">Account details</a>
-                            <a href="./logOut.html" class="dropdownLinks">Log out</a>
+                            <a href="./logout.html" class="dropdownLinks">Log out</a>
                             <a href="./coupons.html" class="dropdownLinks">Coupons</a>
                         </div>
                     </div>
