Mottó átírása, javítása

--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -20,7 +20,7 @@
         <div class="felsoLec">
             <div class="webName">
                 <a href="./home.html"><p class="oldalnev">Csudajó Áruház</p></a>
-                <p class="motto">Itt még romániát is megtalálod!</p>
+                <p class="motto">Fedezd fel a lehetetlent!</p>
             </div>
 
             <div class="hamburger">
