IK-34, IK-45 fejlesztői doksi és bugfix

--- a/HTML/logout.html
+++ b/HTML/logout.html
@@ -140,7 +140,7 @@
         </div>
     </div>
     <div class="route">
-        <p>Home/Account/Coupons</p>
+        <p>Home/Account/Logout</p>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
