--- a/HTML/shopClothing.html
+++ b/HTML/shopClothing.html
@@ -117,6 +117,11 @@
     </div>
     <div class="route">
         <p>Home/Shop/Clothing</p>
+        <a href="./HTML/kosar.html"><div class="cart-icon-container">
+            <img src="https://cdn-icons-png.flaticon.com/512/1170/1170678.png" alt="Cart" id="cart-icon">
+            <span id="cart-count">0</span>
+            <div id="cart-preview" class="hidden"></div>
+        </div></a>
     </div>
     <!--Baloldal, Jobboldal-->
     <div class="main">
